src/styles/tokens/semantics/_spacing.scss
@use "../primitives" as *;

:root {
  // Positive spacing variables
  --s-spacing-0: #{$p-spacing-0};
  --s-spacing-1: #{$p-spacing-1};
  --s-spacing-2: #{$p-spacing-2};
  --s-spacing-3: #{$p-spacing-3};
  --s-spacing-4: #{$p-spacing-4};
  --s-spacing-5: #{$p-spacing-5};
  --s-spacing-6: #{$p-spacing-6};
  --s-spacing-7: #{$p-spacing-7};
  --s-spacing-8: #{$p-spacing-8};
  --s-spacing-9: #{$p-spacing-9};
  --s-spacing-10: #{$p-spacing-10};
  --s-spacing-11: #{$p-spacing-11};
  --s-spacing-12: #{$p-spacing-12};
  --s-spacing-13: #{$p-spacing-13};
  --s-spacing-14: #{$p-spacing-14};
  --s-spacing-15: #{$p-spacing-15};

  // Negative spacing variables
  --s-neg-spacing-0: -#{$p-spacing-0};
  --s-neg-spacing-1: -#{$p-spacing-1};
  --s-neg-spacing-2: -#{$p-spacing-2};
  --s-neg-spacing-3: -#{$p-spacing-3};
  --s-neg-spacing-4: -#{$p-spacing-4};
  --s-neg-spacing-5: -#{$p-spacing-5};
  --s-neg-spacing-6: -#{$p-spacing-6};
  --s-neg-spacing-7: -#{$p-spacing-7};
  --s-neg-spacing-8: -#{$p-spacing-8};
  --s-neg-spacing-9: -#{$p-spacing-9};
  --s-neg-spacing-10: -#{$p-spacing-10};
  --s-neg-spacing-11: -#{$p-spacing-11};
  --s-neg-spacing-12: -#{$p-spacing-12};
  --s-neg-spacing-13: -#{$p-spacing-13};
  --s-neg-spacing-14: -#{$p-spacing-14};
  --s-neg-spacing-15: -#{$p-spacing-15};

  // semantics
  --s-spacing-app-horizontal: var(--s-spacing-10);
}

